--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>voyäge.mastering</title>
     <meta
       name="description"
-      content="Toggle between two audio files to compare"
+      content="master your lofi"
     />
-    <meta name="author" content="Matt Bartley" />
+    <meta name="author" content="Rayan Telleria" />
 
-    <meta property="og:title" content="A/B Audio Player" />
+    <meta property="og:title" content="voyäge.mastering" />
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
@@ -20,8 +20,8 @@
     />
     <meta property="og:image" content="image.png" />
 
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <!-- <link rel="icon" href="/favicon.ico" /> -->
+    <!-- <link rel="apple-touch-icon" href="/apple-touch-icon.png" /> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
