--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <div class="all-container">
         <div class="intro-container">
-          <span class="intro-left">master.voyage</span>
+          <span class="intro-left">master.voyäge</span>
           <span class="intro-right">lofi artist, professional mastering engineer.<br>listen to demos below.</span>
         </div>
         <div class="players-container">
