--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   />
+
+
 </head>
 <body>
-    <div class="all-container">
+    <div class="background-container">
         <div class="intro-container">
           <span class="intro-left">master.voyäge</span>
           <span class="intro-right">lofi artist, professional mastering engineer.<br>listen to demos below.</span>
@@ -126,7 +128,7 @@
               with voyäge mastering, i want to provide a high-quality, affordable alternative for lofi producers to polish their compositions before publishing them - while also discovering new music!
             </span>
             <div class="home-logos">
-              <img class="abbeyroadlogo" src="/assets/logo_abbeyroad.png"><img class="chillhoplogo" src="/assets/logo_chillhop.jpg"></div>
+              <img class="abbeyroadlogo" src="assets/logo_abbeyroad.png"><img class="chillhoplogo" src="assets/logo_chillhop.jpg"></div>
           </div>
           <div class="home-ratescontact">
             <div class="rates">
@@ -140,7 +142,8 @@
               <span class="contact-email"><span style="font-style: italic;">contact@voyagemastering</span><br>discord: v.oyage</span>
             </div>
           </div>
+          <script src="script.js"></script>
     </div>
-    <script src="script.js"></script>
+
 </body>
 </html>
