--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             </div>
             <div class="contact">
               <span class="contact-title">contact me:</span>
-              <span class="contact-email"><span style="font-style: italic;">contact@voyagemastering</span><br>discord: v.oyage</span>
+              <span class="contact-email"><span style="font-style: italic;">rayantelleria@gmail.com</span><br>discord: v.oyage</span>
             </div>
           </div>
           <script src="script.js"></script>
